@@ -1,3 +1,11 @@
+2005-10-09  Mark McLoughlin  <mark@skynet.ie>
+
+	Based on patch from Lorenzo Colitti <lorenzo@colitti.com>
+	in bug #316672
+
+	* backends/markup-tree.c: (parse_tree): read and process
+	the xml file incrementally in 4k chunks.
+
 2005-09-13  Stepan Kasal  <kasal@ucw.cz>
 
 	* gconf-2.m4.in (AM_GCONF_SOURCE_2): Simplify the handling of
